--- a/package.json
+++ b/package.json
@@ -6,18 +6,30 @@
   "dependencies": {
     "babel-plugin-syntax-async-functions": "^6.1.4",
     "babel-plugin-transform-regenerator": "^6.1.4",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-root-import": "^5.0.0",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.16.0",
     "babel-polyfill": "^6.1.4",
-    "babel-preset-es2015": "^6.1.4",
     "request": "^2.65.0",
+    "esdoc": "^0.5.2",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-import-resolver-node": "^0.3.0",
+    "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.6.0",
+    "hashapi-lib-node": "*",
      "mongodb": "*",
     "sprintf-js": "*",
     "command-line-args":"*"
-  },
+  } ,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
