--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "hashapi-lib-node": "*",
      "mongodb": "*",
     "sprintf-js": "*",
-    "command-line-args":"*"
+    "command-line-args":"*",
+    "chainpoint-validate":"*"
   } ,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
