--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "",
   "main": "mongoHash.js",
   "dependencies": {
-    "babel-plugin-syntax-async-functions": "^6.1.4",
-    "babel-plugin-transform-regenerator": "^6.1.4",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-root-import": "^5.0.0",
+    "babel-plugin-syntax-async-functions": "^6.1.4",
     "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-regenerator": "^6.1.4",
+    "babel-polyfill": "^6.1.4",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.16.0",
-    "babel-polyfill": "^6.1.4",
-    "request": "^2.65.0",
+    "chainpoint-validate": "*",
+    "command-line-args": "*",
     "esdoc": "^0.5.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^13.0.0",
@@ -26,12 +27,12 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
     "hashapi-lib-node": "*",
-     "mongodb": "*",
-    "sprintf-js": "*",
-    "command-line-args":"*",
-    "chainpoint-validate":"*",
-    "node-rest-client":"*"npm in
-  } ,
+    "json-stringify-safe": "^5.0.1",
+    "mongodb": "*",
+    "node-rest-client": "*",
+    "request": "^2.65.0",
+    "sprintf-js": "*"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
